refresh tsqlt on azure during ci

--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -53,12 +53,6 @@ jobs:
         with:
           path: ""
           ref: ${{ github.head_ref }}
-      
-      # - name: Install and cache PowerShell modules
-      #   uses: potatoqualitee/psmodulecache@v4.5
-      #   with:
-      #     modules-to-cache: dbatools
-      #     shell: powershell
 
       - name: Install SQL Server
         continue-on-error: true
@@ -77,12 +71,12 @@ jobs:
           sa-password: L0wlydb4
 
       - name: Install tSQLt
-        uses: lowlydba/tsqlt-installer@v1
+        uses: lowlydba/tsqlt-installer@v1.1
         with:
           sql-instance: ${{ env.SQLINSTANCE }}
           database: ${{ env.DATABASE }}
           version: "latest"
-          create: true
+          create-database: true
       
       - name: Install multitool
         run: |
