--- a/.github/workflows/azuresql-unit.yml
+++ b/.github/workflows/azuresql-unit.yml
@@ -49,6 +49,16 @@ jobs:
         run: |
           New-Item -Path $Env:TSQLT_FILE -ItemType "File" -Value "EXEC tsqlt.RunAll;" -Force
 
+      - name: Install tSQLt
+        uses: lowlydba/tsqlt-installer@v1
+        with:
+          sql-instance: ${{ env.SQLINSTANCE }}
+          database: ${{ env.DATABASE }}
+          user: ${{ secrets.AZURE_USERNAME }}
+          password: ${{ secrets.AZURE_PASSWORD}}
+          version: "latest"
+          update: true
+
       - name: Install multitool
         uses: azure/sql-action@v1.3
         with:
