--- a/.github/actions/tsqllint-action/Dockerfile
+++ b/.github/actions/tsqllint-action/Dockerfile
@@ -3,9 +3,10 @@ FROM node:latest
 ###############################
 # Add add'l packages required #
 ###############################
-RUN apt-get -qq update \
-    && apt-get -qq install libunwind8 \
-    && yarn global add tsqllint
+RUN DEBIAN_FRONTEND=noninteractive && \
+    apt-get -qq update && \
+    apt-get -qq install libunwind8  && \
+    yarn global add tsqllint
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
