--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,5 +30,5 @@ jobs:
       - name: TSQLLint
         uses: ./.github/actions/tsqllint-action
         with:
-          path: "*.sql *.tsql *.sql"
+          path: "*.sql *.tsql"
           config: "./.github/linter-conf/.tsqllintrc_150"
