--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,8 +28,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: TSQLLint
-        uses: lowlydba/tsqllint-action@v0.1.0
+        uses: lowlydba/tsqllint-action@filter-files
         with:
-          path: "*.sql"
+          #path: "*.sql"
           config: "./.github/linter-conf/.tsqllintrc_150"
           comment: true
+          only_changed_files: true
