--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v3.0.2
 
       - name: Super Linter
-        uses: docker://github/super-linter@v4.9.5
+        uses: github/super-linter@v4.9.5
         env:
           LINTER_RULES_PATH: .github/linter-conf
           VALIDATE_MARKDOWN: true
