--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,7 @@ jobs:
       - name: TSQLLint
         uses: lowlydba/tsqllint-action@filter-files
         with:
-          #path: "*.sql"
+          path: "*.sql"
           config: "./.github/linter-conf/.tsqllintrc_150"
           comment: true
           only_changed_files: true
