--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: TSQLLint
-        uses: lowlydba/tsqllint-action@filter-files
+        uses: lowlydba/tsqllint-action@main
         with:
           path: "*.sql"
           config: "./.github/linter-conf/.tsqllintrc_150"
