--- a/.github/workflows/azuresql-unit.yml
+++ b/.github/workflows/azuresql-unit.yml
@@ -63,10 +63,10 @@ jobs:
         uses: azure/sql-action@v2
         with:
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-          sql-file: ${{ env.INSTALLER_FILE }}
+          path: ${{ env.INSTALLER_FILE }}
 
       - name: Run tSQLt tests
         uses: azure/sql-action@v2
         with:
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
-          sql-file: ${{ env.TSQLT_FILE }}
+          path: ${{ env.TSQLT_FILE }}
