try prerelease sqlserver version for 2022 compatibility

--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -76,6 +76,10 @@ jobs:
           database: ${{ env.DATABASE }}
           version: "latest"
           create-database: true
+
+      - name: Update SqlServer Module
+        run: |
+          Install-Module SqlServer -AllowClobber -AllowPreRelease -Force
       
       - name: Install multitool
         run: |
