--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,4 +35,4 @@ jobs:
           path: "*.sql"
           config: "./.github/linter-conf/.tsqllintrc_150"
           comment: true
-          only_changed_files: true
+          only-changed-files: true
