--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -109,8 +109,8 @@ jobs:
       - name: Upload sp_doc sample artifact
         uses: actions/upload-artifact@v4
         with:
-          name: sp_doc-sample
-          path: "${{ env.SAMPLE_DATABASE }}-${{ matrix.sql_server}}.md"
+          name: sp_doc-sample-${{ matrix.sql_server }}
+          path: "${{ env.SAMPLE_DATABASE }}-${{ matrix.sql_server }}.md"
 
       # Only do cov report on latest SQL Server version
       - name: Produce the coverage report
